# yutani

./: .gitignore  Cargo.toml  readme.md
examples/: Cargo.toml  client.rs  custom_client.rs  custom_server.rs  lease.rs  server.rs
examples/basic/: main.rs  protocol.rs  readme.md  shm.rs
examples/custom/: main.rs
examples/protocol/: wayland.toml
examples/vk_client/: main.rs
protocol/: custom.toml  xdg-shell.toml
src/: client.rs  lease.rs  lib.rs  message.rs  os.rs  server.rs  socket.rs  types.rs  wire.rs
tests/: client.rs  server.rs
